[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamixel_sdk"
version = "3.7.51"
description = "Dynamixel SDK 3. python package"
authors = [{name = "Leon Jung", email = "rwjung@robotis.com"}]
license = {text = "Apache 2.0"}
keywords = ["Dynamixel", "SDK", "Python"]
dependencies = ["pyserial"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dynamixel_sdk = { path = ".", editable = true }

